@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.51
-releasedate		20050512
+releasedate		20050522
 
 ##############################################################################
 # host dependent configuration
