@@ -1471,9 +1471,9 @@ A: When the stop key is pressed, the browser will close its connection to
 
    The situation is a little bit different if the CGI program is running
    with SpeedyCGI. From the point of view of httpd, the speedycgi frontend
-   is the CGI process, so the frontend will be terminated it as the above
-   when speedy front tries to pass the data coming from the real CGI process
-   forked by speedy_backend.
+   is the CGI process, so the frontend will be terminated as the above
+   when it tries to pass the data coming from the speedy_backend to httpd.
+   The data is result generated by real CGI process forked by speedy_backend.
 
    When the speedy_backend detects the termination of the speedy frontend,
    it will close the pipes to the real CGI process, but won't send TERM
