@@ -116,9 +116,9 @@ Please use mirror sites near you to avoid overload on official sites!
 
   <tr>
   <td>3</td>
-  <td><a href="http://openwebmail.kkellas.com.my/">http://openwebmail.kkellas.com.my/</a></td>
+  <td><a href="http://openwebmail.opusplc.com/">http://openwebmail.opusplc.com/</a></td>
   <td>Malaysia</td>
-  <td><a href="#email" title="meli.AT.kkellas.com.my">Ramli Mohd</a></td>
+  <td><a href="#email" title="meli.AT.opusplc.com">Ramli Mohd</a></td>
   </tr>
 
   <tr>
